feat: total payment (income) api
