# backend/public/docs/api-docs.yaml
@@ -68,6 +68,15 @@ paths:
   
   /api/orders-user/{user_id}:
     $ref: './order.yaml#/OrderUser_UserID'
+  
+  /api/payments/total:
+    $ref: './payment.yaml#/Total'
+  
+  /api/payments/total/paid:
+    $ref: './payment.yaml#/TotalPaid'
+  
+  /api/payments/total/unpaid:
+    $ref: './payment.yaml#/TotalUnpaid'
 
   /api/invitations:
     $ref: './invitation.yaml#/Invitations'
